src/test/ui/inference/question-mark-type-infer.stderr
error[E0282]: type annotations needed
  --> $DIR/question-mark-type-infer.rs:10:30
   |
LL |     l.iter().map(f).collect()?
   |                              ^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
